force-app/main/default/objects/Incident_Timeline__c/Incident_Timeline__c.object-meta.xml
<CustomObject>
    <label>Incident Timeline</label>
    <pluralLabel>Incident Timelines</pluralLabel>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>Timeline Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>