force-app/main/default/objects/Incident_Timeline__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Detection</fullName><default>false</default><label>Detection</label></value>
            <value><fullName>Containment</fullName><default>false</default><label>Containment</label></value>
            <value><fullName>Investigation</fullName><default>false</default><label>Investigation</label></value>
            <value><fullName>Notification</fullName><default>false</default><label>Notification</label></value>
            <value><fullName>Remediation</fullName><default>false</default><label>Remediation</label></value>
            <value><fullName>Verification</fullName><default>false</default><label>Verification</label></value>
            <value><fullName>Closure</fullName><default>false</default><label>Closure</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>