force-app/main/default/objects/Incident_Timeline__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <label>Performed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>