force-app/main/default/objects/Incident_Timeline__c/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <label>SLA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>On_Track</fullName><default>false</default><label>On Track</label></value>
            <value><fullName>At_Risk</fullName><default>false</default><label>At Risk</label></value>
            <value><fullName>Breached</fullName><default>false</default><label>Breached</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>